nav updates for coffee shops

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1857,23 +1857,33 @@
 <body>
 
     <!-- Navigation -->
-    <nav id="nav">
+ <nav id="nav">
         <a href="/" class="nav-logo">
             <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
         </a>
         <ul class="nav-links">
             <li><a href="/">For Coffee Lovers</a></li>
+            <li><a href="/for-coffee-shops/">Overview</a></li>
             <li><a href="#platform">Platform</a></li>
             <li><a href="#loyalty">Loyalty</a></li>
             <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#about">About</a></li>
             <li>
-                <span class="nav-dropdown-trigger">Resources</span>
+                <span class="nav-dropdown-trigger">Company</span>
                 <div class="nav-dropdown">
-                    <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="/blog/">Industry Blog</a>
-                    <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
+                    <a href="/about/">About</a>
+                    <a href="/blog/">Blog</a>
                     <a href="/testimonials/">Partner Stories</a>
+                    <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
+                    <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
+                </div>
+            </li>
+            <li>
+                <span class="nav-dropdown-trigger">Solutions</span>
+                <div class="nav-dropdown">
+                    <a href="/point-of-sale-for-coffee-shops/">POS for Coffee Shops</a>
+                    <a href="/rewards/">Rewards & Loyalty</a>
+                    <a href="/gift-cards/">Gift Cards</a>
+                    <a href="/point-of-sale-for-coffee-shops/">See All Features</a>
                 </div>
             </li>
         </ul>
@@ -1890,27 +1900,37 @@
     </nav>
     
     <!-- Mobile Menu -->
-    <div class="mobile-menu" id="mobileMenu">
-        <ul class="mobile-menu-links">
-            <li><a href="/">For Coffee Lovers</a></li>
-            <li><a href="#platform" class="mobile-nav-link">Platform</a></li>
-            <li><a href="#loyalty" class="mobile-nav-link">Loyalty</a></li>
-            <li><a href="#pricing" class="mobile-nav-link">Pricing</a></li>
-            <li><a href="#about" class="mobile-nav-link">About</a></li>
-            <li>
-                <div class="mobile-dropdown-trigger" id="mobileResourcesTrigger">Resources</div>
-                <div class="mobile-dropdown" id="mobileResourcesDropdown">
-                    <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="/blog/">Industry Blog</a>
-                    <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="/testimonials/">Partner Stories</a>
-                </div>
-            </li>
-        </ul>
-        <div class="mobile-menu-cta">
-            <a href="#join" class="btn btn-primary mobile-nav-link">Join the Collective</a>
-        </div>
+<div class="mobile-menu" id="mobileMenu">
+    <ul class="mobile-menu-links">
+        <li><a href="/">For Coffee Lovers</a></li>
+        <li><a href="/for-coffee-shops/" class="mobile-nav-link">Overview</a></li>
+        <li><a href="#platform" class="mobile-nav-link">Platform</a></li>
+        <li><a href="#loyalty" class="mobile-nav-link">Loyalty</a></li>
+        <li><a href="#pricing" class="mobile-nav-link">Pricing</a></li>
+        <li>
+            <div class="mobile-dropdown-trigger" id="mobileCompanyTrigger">Company</div>
+            <div class="mobile-dropdown" id="mobileCompanyDropdown">
+                <a href="/about/" class="mobile-nav-link">About</a>
+                <a href="/blog/" class="mobile-nav-link">Blog</a>
+                <a href="/testimonials/" class="mobile-nav-link">Partner Stories</a>
+                <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
+                <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
+            </div>
+        </li>
+        <li>
+            <div class="mobile-dropdown-trigger" id="mobileSolutionsTrigger">Solutions</div>
+            <div class="mobile-dropdown" id="mobileSolutionsDropdown">
+                <a href="/point-of-sale-for-coffee-shops/" class="mobile-nav-link">POS for Coffee Shops</a>
+                <a href="/rewards/" class="mobile-nav-link">Rewards & Loyalty</a>
+                <a href="/gift-cards/" class="mobile-nav-link">Gift Cards</a>
+                <a href="/point-of-sale-for-coffee-shops/" class="mobile-nav-link">See All Features</a>
+            </div>
+        </li>
+    </ul>
+    <div class="mobile-menu-cta">
+        <a href="#join" class="btn btn-primary mobile-nav-link">Join the Collective</a>
     </div>
+</div>
 
     <!-- Hero -->
     <section class="hero" id="home">
