javascript fix for coffee shops display issue

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2384,8 +2384,10 @@
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
         const mobileMenu = document.getElementById('mobileMenu');
         const mobileNavLinks = document.querySelectorAll('.mobile-nav-link');
-        const mobileResourcesTrigger = document.getElementById('mobileResourcesTrigger');
-        const mobileResourcesDropdown = document.getElementById('mobileResourcesDropdown');
+        const mobileCompanyTrigger = document.getElementById('mobileCompanyTrigger');
+        const mobileCompanyDropdown = document.getElementById('mobileCompanyDropdown');
+        const mobileSolutionsTrigger = document.getElementById('mobileSolutionsTrigger');
+        const mobileSolutionsDropdown = document.getElementById('mobileSolutionsDropdown');
         
         // Toggle mobile menu
         mobileMenuBtn.addEventListener('click', () => {
@@ -2403,11 +2405,21 @@
             });
         });
         
-        // Toggle resources dropdown in mobile menu
-        mobileResourcesTrigger.addEventListener('click', () => {
-            mobileResourcesTrigger.classList.toggle('active');
-            mobileResourcesDropdown.classList.toggle('active');
-        });
+        // Toggle Company dropdown in mobile menu
+        if (mobileCompanyTrigger) {
+            mobileCompanyTrigger.addEventListener('click', () => {
+                mobileCompanyTrigger.classList.toggle('active');
+                mobileCompanyDropdown.classList.toggle('active');
+            });
+        }
+
+        // Toggle Solutions dropdown in mobile menu
+        if (mobileSolutionsTrigger) {
+            mobileSolutionsTrigger.addEventListener('click', () => {
+                mobileSolutionsTrigger.classList.toggle('active');
+                mobileSolutionsDropdown.classList.toggle('active');
+            });
+        }
 
         // Navigation scroll effect
         const nav = document.getElementById('nav');
