--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -57,17 +57,18 @@
       position: absolute;
       right: 0;
       top: 100%;
-      margin-top: 4px;
+      padding-top: 8px;
+      min-width: 160px;
+      z-index: 50;
+    }
+    .dropdown-menu-inner {
       background: white;
       border: 1px solid #e5e5e5;
       border-radius: 8px;
       box-shadow: 0 10px 40px rgba(0,0,0,0.15);
-      min-width: 160px;
-      z-index: 50;
       overflow: hidden;
     }
-    .dropdown:hover .dropdown-menu,
-    .dropdown-menu:hover {
+    .dropdown:hover .dropdown-menu {
       display: block;
     }
     .dropdown-menu a,
