--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2347,7 +2347,7 @@
             <div>
                 <h4 style="font-weight: 700; margin-bottom: 1rem; color: #171717;">Company</h4>
                 <ul style="list-style: none; padding: 0; margin: 0;">
-                    <li style="margin-bottom: 0.5rem;"><a href="#about" style="color: #525252; text-decoration: none; font-size: 0.85rem;">About</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/about/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">About</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/blog/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Blog</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/terms/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Terms and Conditions</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/privacy/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Privacy Policy</a></li>
