--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2331,8 +2331,8 @@
                 <ul style="list-style: none; padding: 0; margin: 0;">
                     <li style="margin-bottom: 0.5rem;"><a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Download App</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/locations/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Find Shops</a></li>
-                    <li style="margin-bottom: 0.5rem;"><a href="#loyalty" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Rewards</a></li>
-                    <li style="margin-bottom: 0.5rem;"><a href="#" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Gift Cards</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/rewards/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Rewards</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/gift-cards/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Gift Cards</a></li>
                 </ul>
             </div>
             <div>
