--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2368,13 +2368,17 @@
             <div id="hubspotForm"></div>
             <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
             <script>
-                hbspt.forms.create({
-                    region: "na1",
-                    portalId: "4591743",
-                    formId: "021a8c96-f616-4de2-b1db-57011b09db3f",
-                    target: "#hubspotForm",
-                    css: "",
-                    cssClass: "hubspot-form-custom"
+                window.addEventListener('load', function() {
+                    if (typeof hbspt !== 'undefined') {
+                        hbspt.forms.create({
+                            region: "na1",
+                            portalId: "4591743",
+                            formId: "021a8c96-f616-4de2-b1db-57011b09db3f",
+                            target: "#hubspotForm",
+                            css: "",
+                            cssClass: "hubspot-form-custom"
+                        });
+                    }
                 });
             </script>
 
@@ -2402,7 +2406,7 @@
             <div>
                 <h4 style="font-weight: 700; margin-bottom: 1rem; color: #171717;">For Coffee Lovers</h4>
                 <ul style="list-style: none; padding: 0; margin: 0;">
-                    <li style="margin-bottom: 0.5rem;"><a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Download App</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="https://get.joe.coffee" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Download App</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/locations/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Find Shops</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/rewards/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Rewards</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/gift-cards/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Gift Cards</a></li>
