--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -18,7 +18,10 @@
     <meta name="twitter:image" content="https://joe.coffee/images/og-default.png">
     
     <link rel="canonical" href="https://joe.coffee/for-coffee-shops/">
-    <link rel="icon" type="image/png" href="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     
     <script type="application/ld+json">
     {
