--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -18,10 +18,7 @@
     <meta name="twitter:image" content="https://joe.coffee/images/og-default.png">
     
     <link rel="canonical" href="https://joe.coffee/for-coffee-shops/">
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png">
     
     <script type="application/ld+json">
     {
@@ -1620,6 +1617,52 @@
             margin-bottom: 1rem;
             color: var(--gray-600);
             font-size: 0.9rem;
+        }
+
+        /* Checkbox list styling (How did you hear about us?) */
+        #hubspotForm ul.inputs-list {
+            list-style: none !important;
+            margin: 0 !important;
+            padding: 0 !important;
+        }
+
+        #hubspotForm ul.inputs-list li {
+            list-style: none !important;
+            list-style-type: none !important;
+            margin: 0 0 0.75rem 0 !important;
+            padding: 0 !important;
+        }
+
+        #hubspotForm ul.inputs-list li::before {
+            display: none !important;
+            content: none !important;
+        }
+
+        #hubspotForm ul.inputs-list li::marker {
+            display: none !important;
+            content: none !important;
+        }
+
+        #hubspotForm ul.inputs-list li label {
+            display: flex !important;
+            flex-direction: row !important;
+            align-items: center !important;
+            gap: 0.5rem !important;
+        }
+
+        #hubspotForm ul.inputs-list li label input[type="checkbox"] {
+            width: 18px !important;
+            min-width: 18px !important;
+            height: 18px !important;
+            margin: 0 !important;
+            order: -1 !important;
+            flex-shrink: 0 !important;
+        }
+
+        #hubspotForm ul.inputs-list li label span {
+            font-size: 0.9rem;
+            color: var(--gray-700);
+            order: 1 !important;
         }
 
         /* Legal consent styling */
