--- a/crm/index.html
+++ b/crm/index.html
@@ -268,7 +268,7 @@
     const SUPABASE_URL = 'https://vpnoaxpmhuknyaxcyxsu.supabase.co';
     const SUPABASE_KEY = 'sb_publishable_WYLU3R98ozKXNTsZgBV1MA_MFeDE5lB';
     
-    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const db = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
     
     // ==========================================
     // DATA STORE
