--- a/crm/index.html
+++ b/crm/index.html
@@ -631,7 +631,7 @@
     // Config
     const SUPABASE_URL = 'https://vpnoaxpmhuknyaxcyxsu.supabase.co';
     const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZwbm9heHBtaHVrbnlheGN5eHN1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4NjkzNTMsImV4cCI6MjA4MjQ0NTM1M30.0JVwCaY-3nUHuJk49ibifQviT0LxBSdYXMslw9WIr9M';
-    const MAPBOX_TOKEN = 'pk.eyJ1IjoiYnJlbmRlbmNvZmZleSIsImEiOiJjbTVycXk4anEwMHU2MnFwdHBtZmVtcHc3In0.INjjBnfpRPl4pv-2NcRB-A';
+    const MAPBOX_TOKEN = 'pk.eyJ1IjoiYnJlbmRlbm1hcnRpbjA1IiwiYSI6ImNtam96djh4NjNmbWYzZG9iemRxN3pxMmMifQ.u-HWWEKde0TILl8lzokdug';
     
     const db = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
     mapboxgl.accessToken = MAPBOX_TOKEN;
